; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/brcmnand/extr_brcmnand.c_brcmnand_clear_ecc_addr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/brcmnand/extr_brcmnand.c_brcmnand_clear_ecc_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmnand_controller = type { i32 }

@BRCMNAND_UNCORR_ADDR = common dso_local global i32 0, align 4
@BRCMNAND_CORR_ADDR = common dso_local global i32 0, align 4
@BRCMNAND_UNCORR_EXT_ADDR = common dso_local global i32 0, align 4
@BRCMNAND_CORR_EXT_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcmnand_controller*)* @brcmnand_clear_ecc_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @brcmnand_clear_ecc_addr(%struct.brcmnand_controller* %0) #0 {
  %2 = alloca %struct.brcmnand_controller*, align 8
  store %struct.brcmnand_controller* %0, %struct.brcmnand_controller** %2, align 8
  %3 = load %struct.brcmnand_controller*, %struct.brcmnand_controller** %2, align 8
  %4 = load i32, i32* @BRCMNAND_UNCORR_ADDR, align 4
  %5 = call i32 @brcmnand_write_reg(%struct.brcmnand_controller* %3, i32 %4, i32 0)
  %6 = load %struct.brcmnand_controller*, %struct.brcmnand_controller** %2, align 8
  %7 = load i32, i32* @BRCMNAND_CORR_ADDR, align 4
  %8 = call i32 @brcmnand_write_reg(%struct.brcmnand_controller* %6, i32 %7, i32 0)
  %9 = load %struct.brcmnand_controller*, %struct.brcmnand_controller** %2, align 8
  %10 = load i32, i32* @BRCMNAND_UNCORR_EXT_ADDR, align 4
  %11 = call i32 @brcmnand_write_reg(%struct.brcmnand_controller* %9, i32 %10, i32 0)
  %12 = load %struct.brcmnand_controller*, %struct.brcmnand_controller** %2, align 8
  %13 = load i32, i32* @BRCMNAND_CORR_EXT_ADDR, align 4
  %14 = call i32 @brcmnand_write_reg(%struct.brcmnand_controller* %12, i32 %13, i32 0)
  ret void
}

declare dso_local i32 @brcmnand_write_reg(%struct.brcmnand_controller*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
